--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,10 @@ h1{
 }
 
 .large-img{
-  /*width:100%;*/
+  width:100%;
   height:400px;
   margin-top: 10px;
+  margin-left: none;
 }
 /* @media (min-width: 750px){
 	.responsive{
