--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,12 @@ h1{
   margin-top: 10px;
   margin-left: none;
 }
+.large1-img{
+  width:100%;
+  height:400px;
+  margin-top: 10px;
+  margin-right: none;
+}
 /* @media (min-width: 750px){
 	.responsive{
 		display: inline-block;
