--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,14 @@ h4{color: yellow;}
                          thumbnail) */
   max-height: 150px;  /* make sure that the box doesn't get too big */
   height : 150px;     /* even if the text is big */
-  border-radius: 10px;/* rounded corners */
+  /*rder-radius: 10px;/* rounded corners */
   background: black;
+  margin-right: none;
 }
 
 #mainViewer {
   margin-top: 10px;
+  margin-left: none;
   background: black;
   color: white;
   /*white-space : pre;*/   /* preserve the original line breaks (see above)*/
