--- a/css/forms.css
+++ b/css/forms.css
@@ -22,7 +22,7 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+#forms {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
