--- a/css/forms.css
+++ b/css/forms.css
@@ -23,10 +23,10 @@ input[type=submit]:hover {
 
 /* Add a background color and some padding around the form */
 #forms {
+  position: center;
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
-  width: 50%;
+  width: 100%;
 }
 label{
   color: black;
